--- a/installation/manifests/upstream-nightly/eventing-kafka-broker/eventing-kafka-broker.yaml
+++ b/installation/manifests/upstream-nightly/eventing-kafka-broker/eventing-kafka-broker.yaml
@@ -17,7 +17,7 @@ metadata:
   name: config-kafka-broker-data-plane
   namespace: knative-eventing
   labels:
-    kafka.eventing.knative.dev/release: "7678c99b6f802f16367a7b3fdcff2f06c5d485e4"
+    kafka.eventing.knative.dev/release: "7d7f3c808bb8934a145722e1d5a281dc1e4621d0"
   annotations:
     knative.dev/example-checksum: "57a32008"
 data:
@@ -133,7 +133,7 @@ data:
     isolation.level=read_uncommitted
     max.poll.interval.ms=300000
     max.poll.records=50
-    # partition.assignment.strategy=org.apache.kafka.clients.consumer.CooperativeStickyAssignor
+    partition.assignment.strategy=org.apache.kafka.clients.consumer.StickyAssignor
     receive.buffer.bytes=65536
     request.timeout.ms=2000
     # sasl.client.callback.handler.class=
@@ -175,6 +175,7 @@ data:
     # ssl.trustmanager.algorithm
   config-kafka-broker-webclient.properties: |
     idleTimeout=10000
+    maxPoolSize=100
   config-kafka-broker-httpserver.properties: |
     idleTimeout=0
 
@@ -197,7 +198,7 @@ kind: ClusterRole
 metadata:
   name: knative-kafka-broker-data-plane
   labels:
-    kafka.eventing.knative.dev/release: "7678c99b6f802f16367a7b3fdcff2f06c5d485e4"
+    kafka.eventing.knative.dev/release: "7d7f3c808bb8934a145722e1d5a281dc1e4621d0"
 rules:
   - apiGroups:
       - "*"
@@ -228,7 +229,7 @@ metadata:
   name: knative-kafka-broker-data-plane
   namespace: knative-eventing
   labels:
-    kafka.eventing.knative.dev/release: "7678c99b6f802f16367a7b3fdcff2f06c5d485e4"
+    kafka.eventing.knative.dev/release: "7d7f3c808bb8934a145722e1d5a281dc1e4621d0"
 
 ---
 # Copyright 2020 The Knative Authors
@@ -249,7 +250,7 @@ kind: ClusterRoleBinding
 metadata:
   name: knative-kafka-broker-data-plane
   labels:
-    kafka.eventing.knative.dev/release: "7678c99b6f802f16367a7b3fdcff2f06c5d485e4"
+    kafka.eventing.knative.dev/release: "7d7f3c808bb8934a145722e1d5a281dc1e4621d0"
 subjects:
   - kind: ServiceAccount
     name: knative-kafka-broker-data-plane
@@ -280,7 +281,7 @@ metadata:
   namespace: knative-eventing
   labels:
     app: kafka-broker-dispatcher
-    kafka.eventing.knative.dev/release: "7678c99b6f802f16367a7b3fdcff2f06c5d485e4"
+    kafka.eventing.knative.dev/release: "7d7f3c808bb8934a145722e1d5a281dc1e4621d0"
 spec:
   selector:
     matchLabels:
@@ -290,7 +291,7 @@ spec:
       name: kafka-broker-dispatcher
       labels:
         app: kafka-broker-dispatcher
-        kafka.eventing.knative.dev/release: "7678c99b6f802f16367a7b3fdcff2f06c5d485e4"
+        kafka.eventing.knative.dev/release: "7d7f3c808bb8934a145722e1d5a281dc1e4621d0"
     spec:
       # To avoid node becoming SPOF, spread our replicas to different nodes and zones.
       topologySpreadConstraints:
@@ -314,7 +315,7 @@ spec:
         runAsNonRoot: true
       containers:
         - name: kafka-broker-dispatcher
-          image: gcr.io/knative-nightly/knative-kafka-broker-dispatcher:v20220629-7678c99b
+          image: gcr.io/knative-nightly/knative-kafka-broker-dispatcher:v20220803-7d7f3c80
           imagePullPolicy: IfNotPresent
           volumeMounts:
             - mountPath: /etc/config
@@ -407,8 +408,7 @@ spec:
           configMap:
             name: kafka-broker-brokers-triggers
         - name: cache
-          emptyDir:
-            sizeLimit: 15Mi
+          emptyDir: {}
         - name: kafka-broker-config-logging
           configMap:
             name: kafka-config-logging
@@ -441,7 +441,7 @@ metadata:
   namespace: knative-eventing
   labels:
     app: kafka-broker-receiver
-    kafka.eventing.knative.dev/release: "7678c99b6f802f16367a7b3fdcff2f06c5d485e4"
+    kafka.eventing.knative.dev/release: "7d7f3c808bb8934a145722e1d5a281dc1e4621d0"
 spec:
   selector:
     matchLabels:
@@ -451,7 +451,7 @@ spec:
       name: kafka-broker-receiver
       labels:
         app: kafka-broker-receiver
-        kafka.eventing.knative.dev/release: "7678c99b6f802f16367a7b3fdcff2f06c5d485e4"
+        kafka.eventing.knative.dev/release: "7d7f3c808bb8934a145722e1d5a281dc1e4621d0"
     spec:
       # To avoid node becoming SPOF, spread our replicas to different nodes and zones.
       topologySpreadConstraints:
@@ -475,7 +475,7 @@ spec:
         runAsNonRoot: true
       containers:
         - name: kafka-broker-receiver
-          image: gcr.io/knative-nightly/knative-kafka-broker-receiver:v20220629-7678c99b
+          image: gcr.io/knative-nightly/knative-kafka-broker-receiver:v20220803-7d7f3c80
           imagePullPolicy: IfNotPresent
           volumeMounts:
             - mountPath: /etc/config
@@ -587,7 +587,7 @@ metadata:
   namespace: knative-eventing
   labels:
     app: kafka-broker-receiver
-    kafka.eventing.knative.dev/release: "7678c99b6f802f16367a7b3fdcff2f06c5d485e4"
+    kafka.eventing.knative.dev/release: "7d7f3c808bb8934a145722e1d5a281dc1e4621d0"
 spec:
   selector:
     app: kafka-broker-receiver
