Update nightly artifacts

--- a/installation/manifests/upstream-nightly/eventing-kafka-broker/eventing-kafka-controller.yaml
+++ b/installation/manifests/upstream-nightly/eventing-kafka-broker/eventing-kafka-controller.yaml
@@ -17,7 +17,7 @@ metadata:
   name: kafka-broker-config
   namespace: knative-eventing
   labels:
-    kafka.eventing.knative.dev/release: "7d7f3c808bb8934a145722e1d5a281dc1e4621d0"
+    kafka.eventing.knative.dev/release: "6f0c657a60aaa45d8e2a272f7e594c212c779f52"
 data:
   default.topic.partitions: "10"
   default.topic.replication.factor: "3"
@@ -43,7 +43,7 @@ metadata:
   name: kafka-channel-config
   namespace: knative-eventing
   labels:
-    kafka.eventing.knative.dev/release: "7d7f3c808bb8934a145722e1d5a281dc1e4621d0"
+    kafka.eventing.knative.dev/release: "6f0c657a60aaa45d8e2a272f7e594c212c779f52"
 data:
   bootstrap.servers: "my-cluster-kafka-bootstrap.kafka:9092"
 
@@ -336,7 +336,7 @@ kind: CustomResourceDefinition
 metadata:
   creationTimestamp: null
   labels:
-    kafka.eventing.knative.dev/release: "7d7f3c808bb8934a145722e1d5a281dc1e4621d0"
+    kafka.eventing.knative.dev/release: "6f0c657a60aaa45d8e2a272f7e594c212c779f52"
     knative.dev/crd-install: "true"
   name: consumers.internal.kafka.eventing.knative.dev
 spec:
@@ -392,7 +392,7 @@ kind: CustomResourceDefinition
 metadata:
   creationTimestamp: null
   labels:
-    kafka.eventing.knative.dev/release: "7d7f3c808bb8934a145722e1d5a281dc1e4621d0"
+    kafka.eventing.knative.dev/release: "6f0c657a60aaa45d8e2a272f7e594c212c779f52"
     knative.dev/crd-install: "true"
   name: consumergroups.internal.kafka.eventing.knative.dev
 spec:
@@ -463,7 +463,7 @@ metadata:
   labels:
     duck.knative.dev/addressable: "true"
     knative.dev/crd-install: "true"
-    kafka.eventing.knative.dev/release: "7d7f3c808bb8934a145722e1d5a281dc1e4621d0"
+    kafka.eventing.knative.dev/release: "6f0c657a60aaa45d8e2a272f7e594c212c779f52"
 spec:
   group: eventing.knative.dev
   names:
@@ -717,7 +717,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: eventing-kafka-source-observer
   labels:
-    kafka.eventing.knative.dev/release: "7d7f3c808bb8934a145722e1d5a281dc1e4621d0"
+    kafka.eventing.knative.dev/release: "6f0c657a60aaa45d8e2a272f7e594c212c779f52"
     duck.knative.dev/source: "true"
 rules:
   - apiGroups:
@@ -750,7 +750,7 @@ metadata:
   name: config-kafka-source-defaults
   namespace: knative-eventing
   labels:
-    kafka.eventing.knative.dev/release: "7d7f3c808bb8934a145722e1d5a281dc1e4621d0"
+    kafka.eventing.knative.dev/release: "6f0c657a60aaa45d8e2a272f7e594c212c779f52"
   annotations:
     knative.dev/example-checksum: "b6ed351d"
 data:
@@ -810,7 +810,7 @@ metadata:
   name: config-kafka-descheduler
   namespace: knative-eventing
   labels:
-    kafka.eventing.knative.dev/release: "7d7f3c808bb8934a145722e1d5a281dc1e4621d0"
+    kafka.eventing.knative.dev/release: "6f0c657a60aaa45d8e2a272f7e594c212c779f52"
 data:
   predicates: |
     []
@@ -866,7 +866,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   labels:
-    kafka.eventing.knative.dev/release: "7d7f3c808bb8934a145722e1d5a281dc1e4621d0"
+    kafka.eventing.knative.dev/release: "6f0c657a60aaa45d8e2a272f7e594c212c779f52"
   name: config-kafka-leader-election
   namespace: knative-eventing
   annotations:
@@ -933,7 +933,7 @@ metadata:
   name: config-kafka-scheduler
   namespace: knative-eventing
   labels:
-    kafka.eventing.knative.dev/release: "7d7f3c808bb8934a145722e1d5a281dc1e4621d0"
+    kafka.eventing.knative.dev/release: "6f0c657a60aaa45d8e2a272f7e594c212c779f52"
 data:
   predicates: |
     [
@@ -973,7 +973,7 @@ metadata:
   name: kafka-config-logging
   namespace: knative-eventing
   labels:
-    kafka.eventing.knative.dev/release: "7d7f3c808bb8934a145722e1d5a281dc1e4621d0"
+    kafka.eventing.knative.dev/release: "6f0c657a60aaa45d8e2a272f7e594c212c779f52"
 data:
   config.xml: |
     <configuration>
@@ -1006,7 +1006,7 @@ metadata:
   name: config-tracing
   namespace: knative-eventing
   labels:
-    kafka.eventing.knative.dev/release: "7d7f3c808bb8934a145722e1d5a281dc1e4621d0"
+    kafka.eventing.knative.dev/release: "6f0c657a60aaa45d8e2a272f7e594c212c779f52"
     knative.dev/config-propagation: original
     knative.dev/config-category: eventing
   annotations:
@@ -1066,7 +1066,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: knative-kafka-addressable-resolver
   labels:
-    kafka.eventing.knative.dev/release: "7d7f3c808bb8934a145722e1d5a281dc1e4621d0"
+    kafka.eventing.knative.dev/release: "6f0c657a60aaa45d8e2a272f7e594c212c779f52"
     duck.knative.dev/addressable: "true"
 # Do not use this role directly. These rules will be added to the "addressable-resolver" role.
 rules:
@@ -1109,7 +1109,7 @@ kind: ClusterRole
 metadata:
   name: knative-kafka-channelable-manipulator
   labels:
-    kafka.eventing.knative.dev/release: "7d7f3c808bb8934a145722e1d5a281dc1e4621d0"
+    kafka.eventing.knative.dev/release: "6f0c657a60aaa45d8e2a272f7e594c212c779f52"
     duck.knative.dev/channelable: "true"
 # Do not use this role directly. These rules will be added to the "channelable-manipulator" role.
 rules:
@@ -1146,8 +1146,14 @@ kind: ClusterRole
 metadata:
   name: kafka-controller
   labels:
-    kafka.eventing.knative.dev/release: "7d7f3c808bb8934a145722e1d5a281dc1e4621d0"
+    kafka.eventing.knative.dev/release: "6f0c657a60aaa45d8e2a272f7e594c212c779f52"
 rules:
+  - apiGroups:
+      - "*"
+    resources:
+      - configmaps
+    verbs:
+      - delete
   - apiGroups:
       - "*"
     resources:
@@ -1372,7 +1378,7 @@ metadata:
   name: kafka-controller
   namespace: knative-eventing
   labels:
-    kafka.eventing.knative.dev/release: "7d7f3c808bb8934a145722e1d5a281dc1e4621d0"
+    kafka.eventing.knative.dev/release: "6f0c657a60aaa45d8e2a272f7e594c212c779f52"
 
 ---
 # Copyright 2020 The Knative Authors
@@ -1393,7 +1399,7 @@ kind: ClusterRoleBinding
 metadata:
   name: kafka-controller
   labels:
-    kafka.eventing.knative.dev/release: "7d7f3c808bb8934a145722e1d5a281dc1e4621d0"
+    kafka.eventing.knative.dev/release: "6f0c657a60aaa45d8e2a272f7e594c212c779f52"
 subjects:
   - kind: ServiceAccount
     name: kafka-controller
@@ -1408,7 +1414,7 @@ kind: ClusterRoleBinding
 metadata:
   name: kafka-controller-addressable-resolver
   labels:
-    kafka.eventing.knative.dev/release: "7d7f3c808bb8934a145722e1d5a281dc1e4621d0"
+    kafka.eventing.knative.dev/release: "6f0c657a60aaa45d8e2a272f7e594c212c779f52"
 subjects:
   - kind: ServiceAccount
     name: kafka-controller
@@ -1439,7 +1445,7 @@ metadata:
   namespace: knative-eventing
   labels:
     app: kafka-controller
-    kafka.eventing.knative.dev/release: "7d7f3c808bb8934a145722e1d5a281dc1e4621d0"
+    kafka.eventing.knative.dev/release: "6f0c657a60aaa45d8e2a272f7e594c212c779f52"
 spec:
   selector:
     matchLabels:
@@ -1449,7 +1455,7 @@ spec:
       name: kafka-controller
       labels:
         app: kafka-controller
-        kafka.eventing.knative.dev/release: "7d7f3c808bb8934a145722e1d5a281dc1e4621d0"
+        kafka.eventing.knative.dev/release: "6f0c657a60aaa45d8e2a272f7e594c212c779f52"
     spec:
       securityContext:
         runAsNonRoot: true
@@ -1473,7 +1479,7 @@ spec:
               weight: 100
       containers:
         - name: controller
-          image: gcr.io/knative-nightly/knative.dev/eventing-kafka-broker/control-plane/cmd/kafka-controller@sha256:fb8cee93dc428b13ea3749ce6bafbe9771bd6d633a6dfff4afd9f8303b96637e
+          image: gcr.io/knative-nightly/knative.dev/eventing-kafka-broker/control-plane/cmd/kafka-controller@sha256:2c2e27f44fdf16f015e6132a0a555193a28f9fa46a55106127f5c3167c255778
           imagePullPolicy: IfNotPresent
           env:
             - name: BROKER_DATA_PLANE_CONFIG_MAP_NAMESPACE
@@ -1570,10 +1576,6 @@ spec:
               valueFrom:
                 fieldRef:
                   fieldPath: metadata.name
-            - name: BROKER_RECEIVER_IMAGE
-              value: gcr.io/knative-nightly/knative-kafka-broker-receiver:v20220803-7d7f3c80
-            - name: BROKER_DISPATCHER_IMAGE
-              value: gcr.io/knative-nightly/knative-kafka-broker-dispatcher:v20220803-7d7f3c80
           ports:
             - containerPort: 9090
               name: metrics
@@ -1604,7 +1606,7 @@ kind: ClusterRole
 metadata:
   name: kafka-webhook-eventing
   labels:
-    kafka.eventing.knative.dev/release: "7d7f3c808bb8934a145722e1d5a281dc1e4621d0"
+    kafka.eventing.knative.dev/release: "6f0c657a60aaa45d8e2a272f7e594c212c779f52"
 rules:
   # For watching logging configuration and getting certs.
   - apiGroups:
@@ -1706,7 +1708,7 @@ metadata:
   name: kafka-webhook-eventing
   namespace: knative-eventing
   labels:
-    kafka.eventing.knative.dev/release: "7d7f3c808bb8934a145722e1d5a281dc1e4621d0"
+    kafka.eventing.knative.dev/release: "6f0c657a60aaa45d8e2a272f7e594c212c779f52"
 
 ---
 # Copyright 2020 The Knative Authors
@@ -1727,7 +1729,7 @@ kind: ClusterRoleBinding
 metadata:
   name: kafka-webhook-eventing
   labels:
-    kafka.eventing.knative.dev/release: "7d7f3c808bb8934a145722e1d5a281dc1e4621d0"
+    kafka.eventing.knative.dev/release: "6f0c657a60aaa45d8e2a272f7e594c212c779f52"
 subjects:
   - kind: ServiceAccount
     name: kafka-webhook-eventing
@@ -1757,7 +1759,7 @@ kind: MutatingWebhookConfiguration
 metadata:
   name: defaulting.webhook.kafka.eventing.knative.dev
   labels:
-    kafka.eventing.knative.dev/release: "7d7f3c808bb8934a145722e1d5a281dc1e4621d0"
+    kafka.eventing.knative.dev/release: "6f0c657a60aaa45d8e2a272f7e594c212c779f52"
 webhooks:
   - admissionReviewVersions: ["v1", "v1beta1"]
     clientConfig:
@@ -1789,7 +1791,7 @@ kind: MutatingWebhookConfiguration
 metadata:
   name: pods.defaulting.webhook.kafka.eventing.knative.dev
   labels:
-    kafka.eventing.knative.dev/release: "7d7f3c808bb8934a145722e1d5a281dc1e4621d0"
+    kafka.eventing.knative.dev/release: "6f0c657a60aaa45d8e2a272f7e594c212c779f52"
 webhooks:
   # Dispatcher pods webhook config.
   - admissionReviewVersions: ["v1", "v1beta1"]
@@ -1832,7 +1834,7 @@ metadata:
   name: kafka-webhook-eventing-certs
   namespace: knative-eventing
   labels:
-    kafka.eventing.knative.dev/release: "7d7f3c808bb8934a145722e1d5a281dc1e4621d0"
+    kafka.eventing.knative.dev/release: "6f0c657a60aaa45d8e2a272f7e594c212c779f52"
 # The data is populated at install time.
 
 ---
@@ -1855,7 +1857,7 @@ kind: ValidatingWebhookConfiguration
 metadata:
   name: validation.webhook.kafka.eventing.knative.dev
   labels:
-    kafka.eventing.knative.dev/release: "7d7f3c808bb8934a145722e1d5a281dc1e4621d0"
+    kafka.eventing.knative.dev/release: "6f0c657a60aaa45d8e2a272f7e594c212c779f52"
 webhooks:
   - admissionReviewVersions: ["v1", "v1beta1"]
     clientConfig:
@@ -1889,7 +1891,7 @@ metadata:
   namespace: knative-eventing
   labels:
     app: kafka-webhook-eventing
-    kafka.eventing.knative.dev/release: "7d7f3c808bb8934a145722e1d5a281dc1e4621d0"
+    kafka.eventing.knative.dev/release: "6f0c657a60aaa45d8e2a272f7e594c212c779f52"
 spec:
   selector:
     matchLabels:
@@ -1898,7 +1900,7 @@ spec:
     metadata:
       labels:
         app: kafka-webhook-eventing
-        kafka.eventing.knative.dev/release: "7d7f3c808bb8934a145722e1d5a281dc1e4621d0"
+        kafka.eventing.knative.dev/release: "6f0c657a60aaa45d8e2a272f7e594c212c779f52"
     spec:
       # To avoid node becoming SPOF, spread our replicas to different nodes.
       affinity:
@@ -1916,7 +1918,7 @@ spec:
       containers:
         - name: kafka-webhook-eventing
           terminationMessagePolicy: FallbackToLogsOnError
-          image: gcr.io/knative-nightly/knative.dev/eventing-kafka-broker/control-plane/cmd/webhook-kafka@sha256:70a8da9553b31f727e340ef599350e89e1d7958aade0edb29f86d16167411314
+          image: gcr.io/knative-nightly/knative.dev/eventing-kafka-broker/control-plane/cmd/webhook-kafka@sha256:fafaf8b15b14e1fb00a943660bb1891367b4c2aba551f1c4fe30d0247307fd79
           resources:
             requests:
               cpu: 20m
@@ -1974,7 +1976,7 @@ metadata:
   namespace: knative-eventing
   labels:
     app: kafka-webhook-eventing
-    kafka.eventing.knative.dev/release: "7d7f3c808bb8934a145722e1d5a281dc1e4621d0"
+    kafka.eventing.knative.dev/release: "6f0c657a60aaa45d8e2a272f7e594c212c779f52"
 spec:
   ports:
     - name: https-webhook
