--- a/installation/manifests/upstream-nightly/eventing-kafka-broker/eventing-kafka-controller.yaml
+++ b/installation/manifests/upstream-nightly/eventing-kafka-broker/eventing-kafka-controller.yaml
@@ -17,7 +17,7 @@ metadata:
   name: kafka-broker-config
   namespace: knative-eventing
   labels:
-    kafka.eventing.knative.dev/release: "6f0c657a60aaa45d8e2a272f7e594c212c779f52"
+    kafka.eventing.knative.dev/release: "7a6e254cefd258eac851cecee8e3c8ef13bf08d5"
 data:
   default.topic.partitions: "10"
   default.topic.replication.factor: "3"
@@ -43,7 +43,7 @@ metadata:
   name: kafka-channel-config
   namespace: knative-eventing
   labels:
-    kafka.eventing.knative.dev/release: "6f0c657a60aaa45d8e2a272f7e594c212c779f52"
+    kafka.eventing.knative.dev/release: "7a6e254cefd258eac851cecee8e3c8ef13bf08d5"
 data:
   bootstrap.servers: "my-cluster-kafka-bootstrap.kafka:9092"
 
@@ -336,7 +336,7 @@ kind: CustomResourceDefinition
 metadata:
   creationTimestamp: null
   labels:
-    kafka.eventing.knative.dev/release: "6f0c657a60aaa45d8e2a272f7e594c212c779f52"
+    kafka.eventing.knative.dev/release: "7a6e254cefd258eac851cecee8e3c8ef13bf08d5"
     knative.dev/crd-install: "true"
   name: consumers.internal.kafka.eventing.knative.dev
 spec:
@@ -392,7 +392,7 @@ kind: CustomResourceDefinition
 metadata:
   creationTimestamp: null
   labels:
-    kafka.eventing.knative.dev/release: "6f0c657a60aaa45d8e2a272f7e594c212c779f52"
+    kafka.eventing.knative.dev/release: "7a6e254cefd258eac851cecee8e3c8ef13bf08d5"
     knative.dev/crd-install: "true"
   name: consumergroups.internal.kafka.eventing.knative.dev
 spec:
@@ -463,7 +463,7 @@ metadata:
   labels:
     duck.knative.dev/addressable: "true"
     knative.dev/crd-install: "true"
-    kafka.eventing.knative.dev/release: "6f0c657a60aaa45d8e2a272f7e594c212c779f52"
+    kafka.eventing.knative.dev/release: "7a6e254cefd258eac851cecee8e3c8ef13bf08d5"
 spec:
   group: eventing.knative.dev
   names:
@@ -717,7 +717,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: eventing-kafka-source-observer
   labels:
-    kafka.eventing.knative.dev/release: "6f0c657a60aaa45d8e2a272f7e594c212c779f52"
+    kafka.eventing.knative.dev/release: "7a6e254cefd258eac851cecee8e3c8ef13bf08d5"
     duck.knative.dev/source: "true"
 rules:
   - apiGroups:
@@ -750,7 +750,7 @@ metadata:
   name: config-kafka-source-defaults
   namespace: knative-eventing
   labels:
-    kafka.eventing.knative.dev/release: "6f0c657a60aaa45d8e2a272f7e594c212c779f52"
+    kafka.eventing.knative.dev/release: "7a6e254cefd258eac851cecee8e3c8ef13bf08d5"
   annotations:
     knative.dev/example-checksum: "b6ed351d"
 data:
@@ -810,7 +810,7 @@ metadata:
   name: config-kafka-descheduler
   namespace: knative-eventing
   labels:
-    kafka.eventing.knative.dev/release: "6f0c657a60aaa45d8e2a272f7e594c212c779f52"
+    kafka.eventing.knative.dev/release: "7a6e254cefd258eac851cecee8e3c8ef13bf08d5"
 data:
   predicates: |
     []
@@ -866,7 +866,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   labels:
-    kafka.eventing.knative.dev/release: "6f0c657a60aaa45d8e2a272f7e594c212c779f52"
+    kafka.eventing.knative.dev/release: "7a6e254cefd258eac851cecee8e3c8ef13bf08d5"
   name: config-kafka-leader-election
   namespace: knative-eventing
   annotations:
@@ -933,7 +933,7 @@ metadata:
   name: config-kafka-scheduler
   namespace: knative-eventing
   labels:
-    kafka.eventing.knative.dev/release: "6f0c657a60aaa45d8e2a272f7e594c212c779f52"
+    kafka.eventing.knative.dev/release: "7a6e254cefd258eac851cecee8e3c8ef13bf08d5"
 data:
   predicates: |
     [
@@ -973,7 +973,7 @@ metadata:
   name: kafka-config-logging
   namespace: knative-eventing
   labels:
-    kafka.eventing.knative.dev/release: "6f0c657a60aaa45d8e2a272f7e594c212c779f52"
+    kafka.eventing.knative.dev/release: "7a6e254cefd258eac851cecee8e3c8ef13bf08d5"
 data:
   config.xml: |
     <configuration>
@@ -1006,7 +1006,7 @@ metadata:
   name: config-tracing
   namespace: knative-eventing
   labels:
-    kafka.eventing.knative.dev/release: "6f0c657a60aaa45d8e2a272f7e594c212c779f52"
+    kafka.eventing.knative.dev/release: "7a6e254cefd258eac851cecee8e3c8ef13bf08d5"
     knative.dev/config-propagation: original
     knative.dev/config-category: eventing
   annotations:
@@ -1066,7 +1066,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: knative-kafka-addressable-resolver
   labels:
-    kafka.eventing.knative.dev/release: "6f0c657a60aaa45d8e2a272f7e594c212c779f52"
+    kafka.eventing.knative.dev/release: "7a6e254cefd258eac851cecee8e3c8ef13bf08d5"
     duck.knative.dev/addressable: "true"
 # Do not use this role directly. These rules will be added to the "addressable-resolver" role.
 rules:
@@ -1109,7 +1109,7 @@ kind: ClusterRole
 metadata:
   name: knative-kafka-channelable-manipulator
   labels:
-    kafka.eventing.knative.dev/release: "6f0c657a60aaa45d8e2a272f7e594c212c779f52"
+    kafka.eventing.knative.dev/release: "7a6e254cefd258eac851cecee8e3c8ef13bf08d5"
     duck.knative.dev/channelable: "true"
 # Do not use this role directly. These rules will be added to the "channelable-manipulator" role.
 rules:
@@ -1146,7 +1146,7 @@ kind: ClusterRole
 metadata:
   name: kafka-controller
   labels:
-    kafka.eventing.knative.dev/release: "6f0c657a60aaa45d8e2a272f7e594c212c779f52"
+    kafka.eventing.knative.dev/release: "7a6e254cefd258eac851cecee8e3c8ef13bf08d5"
 rules:
   - apiGroups:
       - "*"
@@ -1165,6 +1165,7 @@ rules:
       - watch
       - update
       - create
+      - delete
   - apiGroups:
       - "*"
     resources:
@@ -1223,6 +1224,15 @@ rules:
       - watch
       - update
       - create
+      - delete
+  - apiGroups:
+      - "rbac.authorization.k8s.io"
+    resources:
+      - clusterrolebindings
+    verbs:
+      - get
+      - list
+      - watch
   - apiGroups:
       - "*"
     resources:
@@ -1233,6 +1243,7 @@ rules:
       - watch
       - update
       - create
+      - delete
   - apiGroups:
       - "apps"
     resources:
@@ -1243,6 +1254,7 @@ rules:
       - watch
       - update
       - create
+      - delete
   # Scheduler permissions
   - apiGroups:
       - "*"
@@ -1378,7 +1390,7 @@ metadata:
   name: kafka-controller
   namespace: knative-eventing
   labels:
-    kafka.eventing.knative.dev/release: "6f0c657a60aaa45d8e2a272f7e594c212c779f52"
+    kafka.eventing.knative.dev/release: "7a6e254cefd258eac851cecee8e3c8ef13bf08d5"
 
 ---
 # Copyright 2020 The Knative Authors
@@ -1399,7 +1411,7 @@ kind: ClusterRoleBinding
 metadata:
   name: kafka-controller
   labels:
-    kafka.eventing.knative.dev/release: "6f0c657a60aaa45d8e2a272f7e594c212c779f52"
+    kafka.eventing.knative.dev/release: "7a6e254cefd258eac851cecee8e3c8ef13bf08d5"
 subjects:
   - kind: ServiceAccount
     name: kafka-controller
@@ -1414,7 +1426,7 @@ kind: ClusterRoleBinding
 metadata:
   name: kafka-controller-addressable-resolver
   labels:
-    kafka.eventing.knative.dev/release: "6f0c657a60aaa45d8e2a272f7e594c212c779f52"
+    kafka.eventing.knative.dev/release: "7a6e254cefd258eac851cecee8e3c8ef13bf08d5"
 subjects:
   - kind: ServiceAccount
     name: kafka-controller
@@ -1445,7 +1457,7 @@ metadata:
   namespace: knative-eventing
   labels:
     app: kafka-controller
-    kafka.eventing.knative.dev/release: "6f0c657a60aaa45d8e2a272f7e594c212c779f52"
+    kafka.eventing.knative.dev/release: "7a6e254cefd258eac851cecee8e3c8ef13bf08d5"
 spec:
   selector:
     matchLabels:
@@ -1455,7 +1467,7 @@ spec:
       name: kafka-controller
       labels:
         app: kafka-controller
-        kafka.eventing.knative.dev/release: "6f0c657a60aaa45d8e2a272f7e594c212c779f52"
+        kafka.eventing.knative.dev/release: "7a6e254cefd258eac851cecee8e3c8ef13bf08d5"
     spec:
       securityContext:
         runAsNonRoot: true
@@ -1479,7 +1491,7 @@ spec:
               weight: 100
       containers:
         - name: controller
-          image: gcr.io/knative-nightly/knative.dev/eventing-kafka-broker/control-plane/cmd/kafka-controller@sha256:2c2e27f44fdf16f015e6132a0a555193a28f9fa46a55106127f5c3167c255778
+          image: gcr.io/knative-nightly/knative.dev/eventing-kafka-broker/control-plane/cmd/kafka-controller@sha256:96a4124b9a91324e02956cdbf879c2e13b2f6b10f586ef94b265089c75334846
           imagePullPolicy: IfNotPresent
           env:
             - name: BROKER_DATA_PLANE_CONFIG_MAP_NAMESPACE
@@ -1606,7 +1618,7 @@ kind: ClusterRole
 metadata:
   name: kafka-webhook-eventing
   labels:
-    kafka.eventing.knative.dev/release: "6f0c657a60aaa45d8e2a272f7e594c212c779f52"
+    kafka.eventing.knative.dev/release: "7a6e254cefd258eac851cecee8e3c8ef13bf08d5"
 rules:
   # For watching logging configuration and getting certs.
   - apiGroups:
@@ -1708,7 +1720,7 @@ metadata:
   name: kafka-webhook-eventing
   namespace: knative-eventing
   labels:
-    kafka.eventing.knative.dev/release: "6f0c657a60aaa45d8e2a272f7e594c212c779f52"
+    kafka.eventing.knative.dev/release: "7a6e254cefd258eac851cecee8e3c8ef13bf08d5"
 
 ---
 # Copyright 2020 The Knative Authors
@@ -1729,7 +1741,7 @@ kind: ClusterRoleBinding
 metadata:
   name: kafka-webhook-eventing
   labels:
-    kafka.eventing.knative.dev/release: "6f0c657a60aaa45d8e2a272f7e594c212c779f52"
+    kafka.eventing.knative.dev/release: "7a6e254cefd258eac851cecee8e3c8ef13bf08d5"
 subjects:
   - kind: ServiceAccount
     name: kafka-webhook-eventing
@@ -1759,7 +1771,7 @@ kind: MutatingWebhookConfiguration
 metadata:
   name: defaulting.webhook.kafka.eventing.knative.dev
   labels:
-    kafka.eventing.knative.dev/release: "6f0c657a60aaa45d8e2a272f7e594c212c779f52"
+    kafka.eventing.knative.dev/release: "7a6e254cefd258eac851cecee8e3c8ef13bf08d5"
 webhooks:
   - admissionReviewVersions: ["v1", "v1beta1"]
     clientConfig:
@@ -1791,7 +1803,7 @@ kind: MutatingWebhookConfiguration
 metadata:
   name: pods.defaulting.webhook.kafka.eventing.knative.dev
   labels:
-    kafka.eventing.knative.dev/release: "6f0c657a60aaa45d8e2a272f7e594c212c779f52"
+    kafka.eventing.knative.dev/release: "7a6e254cefd258eac851cecee8e3c8ef13bf08d5"
 webhooks:
   # Dispatcher pods webhook config.
   - admissionReviewVersions: ["v1", "v1beta1"]
@@ -1834,7 +1846,7 @@ metadata:
   name: kafka-webhook-eventing-certs
   namespace: knative-eventing
   labels:
-    kafka.eventing.knative.dev/release: "6f0c657a60aaa45d8e2a272f7e594c212c779f52"
+    kafka.eventing.knative.dev/release: "7a6e254cefd258eac851cecee8e3c8ef13bf08d5"
 # The data is populated at install time.
 
 ---
@@ -1857,7 +1869,7 @@ kind: ValidatingWebhookConfiguration
 metadata:
   name: validation.webhook.kafka.eventing.knative.dev
   labels:
-    kafka.eventing.knative.dev/release: "6f0c657a60aaa45d8e2a272f7e594c212c779f52"
+    kafka.eventing.knative.dev/release: "7a6e254cefd258eac851cecee8e3c8ef13bf08d5"
 webhooks:
   - admissionReviewVersions: ["v1", "v1beta1"]
     clientConfig:
@@ -1891,7 +1903,7 @@ metadata:
   namespace: knative-eventing
   labels:
     app: kafka-webhook-eventing
-    kafka.eventing.knative.dev/release: "6f0c657a60aaa45d8e2a272f7e594c212c779f52"
+    kafka.eventing.knative.dev/release: "7a6e254cefd258eac851cecee8e3c8ef13bf08d5"
 spec:
   selector:
     matchLabels:
@@ -1900,7 +1912,7 @@ spec:
     metadata:
       labels:
         app: kafka-webhook-eventing
-        kafka.eventing.knative.dev/release: "6f0c657a60aaa45d8e2a272f7e594c212c779f52"
+        kafka.eventing.knative.dev/release: "7a6e254cefd258eac851cecee8e3c8ef13bf08d5"
     spec:
       # To avoid node becoming SPOF, spread our replicas to different nodes.
       affinity:
@@ -1918,7 +1930,7 @@ spec:
       containers:
         - name: kafka-webhook-eventing
           terminationMessagePolicy: FallbackToLogsOnError
-          image: gcr.io/knative-nightly/knative.dev/eventing-kafka-broker/control-plane/cmd/webhook-kafka@sha256:fafaf8b15b14e1fb00a943660bb1891367b4c2aba551f1c4fe30d0247307fd79
+          image: gcr.io/knative-nightly/knative.dev/eventing-kafka-broker/control-plane/cmd/webhook-kafka@sha256:49596328b1e99616a9483e070e7f5eee4208369e24cd1a092f0141eea6debfdc
           resources:
             requests:
               cpu: 20m
@@ -1976,7 +1988,7 @@ metadata:
   namespace: knative-eventing
   labels:
     app: kafka-webhook-eventing
-    kafka.eventing.knative.dev/release: "6f0c657a60aaa45d8e2a272f7e594c212c779f52"
+    kafka.eventing.knative.dev/release: "7a6e254cefd258eac851cecee8e3c8ef13bf08d5"
 spec:
   ports:
     - name: https-webhook
