--- a/tests/monitoring.yaml
+++ b/tests/monitoring.yaml
@@ -1,3 +1,5 @@
+# These resources are necessary to allow prometheus to scrape metrics from test namespaces
+
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
