--- a/installation/manifests/upstream-nightly/100-kafka.yaml
+++ b/installation/manifests/upstream-nightly/100-kafka.yaml
@@ -9,14 +9,38 @@ spec:
     version: 3.2.3
     replicas: 3
     listeners:
+      # PLAINTEXT
       - name: plain
         port: 9092
         type: internal
         tls: false
+      # SSL
       - name: tls
         port: 9093
         type: internal
         tls: true
+        authentication:
+          type: tls
+      # protocol=SASL_SSL
+      # sasl.mechanism=SCRAM-SHA-512
+      - name: saslssl
+        port: 9094
+        type: internal
+        tls: true
+        authentication:
+          type: scram-sha-512
+      # protocol=SASL_PLAINTEXT
+      # sasl.mechanism=SCRAM-SHA-512
+      - name: saslplain
+        port: 9095
+        type: internal
+        tls: false
+        authentication:
+          type: scram-sha-512
+    authorization:
+      superUsers:
+        - ANONYMOUS
+      type: simple
     readinessProbe:
       initialDelaySeconds: 15
       timeoutSeconds: 5
